--- a/package.json
+++ b/package.json
@@ -14,18 +14,33 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "emoji-mart": "^5.5.2",
+    "emojilib": "^3.0.10",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "formik": "^2.4.2",
     "next": "13.4.8",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "typescript": "5.1.6"
+    "react-input-emoji": "^5.1.1",
+    "react-redux": "^8.1.1",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
